screen.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

body {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    flex-wrap: nowrap;
    font-family: "Plus Jakarta Sans", sans-serif;;
}

main {
    width: 500px;
}

img {
    width: 500px;
    border-radius: 2px;
    padding-bottom: 1em;
}

